[package]
name = "rswebgl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rustc-hash = "2"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
