[package]
name = "rswebgl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
